changed margin on trip-container to align with route-cards....also increased size of navbar, and logo in navbar. Need to fix avatar size and position

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,10 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
-  height: 56px;
+  height: 70px;
 }
 .logo-navbar{
-  height: 40px;
+  height: 60px;
 }
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
